Bug 66815 - Dropdown widget for line style in dialog Page Style does not react properly on DOWN when focus is on top of the list
Summary: Dropdown widget for line style in dialog Page Style does not react properly o...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha1
Hardware: Other Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-11 10:17 UTC by Cor Nouws
Modified: 2013-07-12 19:13 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot of dialog page style (56.14 KB, image/png)
2013-07-11 10:17 UTC, Cor Nouws
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2013-07-11 10:17:32 UTC
Created attachment 82328 [details]
screenshot of dialog page style

Summary says it all ;)

Open Writer document
Format > Page
tab Column, set columns
go to control Line style for line separator
either click on the right (up/down arrow) or click Alt+Down
now click Down to select an item
   > flickering, but focus does not move down
Comment 1 Cor Nouws 2013-07-11 10:27:14 UTC
@caolán: you know how to handle these.
Of course, not the most urgent (IMHO)

By the way: set version bluntly to some early 410. Obviously that may be wrong, but (IMHO) not the most important too for this bug.
Comment 2 Caolán McNamara 2013-07-11 13:52:44 UTC
I suspect its always been like this. And I suspect its because of trying to disable widgets based on the current value. Better might be to find that code and move it to happen after something has been selected rather then when browsing over the entries.
Comment 3 Commit Notification 2013-07-11 16:21:48 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d55c0c902838540573e32a7cf34cd8c45587adb9

Related: fdo#66815 fix the column dialog's 'enable' dependencies of widgets



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2013-07-11 16:22:07 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=22347f6180cec13c2f1101300e4f0b45b6d1ae39

Resolves: fdo#66815 avoid resetting the selection when values are unchanged



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Cor Nouws 2013-07-12 19:13:08 UTC
lovely, thanks!