Related: fdo#66815 fix the column dialog's 'enable' dependencies of widgets

a) entire block at the bottom depends on > 1 column
b) everything in that block, except the line style widgets themselves, depend
   on line style not "none".
b) additionally then line position has an extra dependency on line height !=
   100%

Change-Id: Ia3c904c7beaa2a3f7b9157d2ec8ab51813601873